# dots-dc-local-renewable

./: .dockerignore  Dockerfile  README.md  code_gen.py  input.json  pyproject.toml
.github/workflows/: publish-image.yml  python-app.yml
docs/: Renewable_Service.md
src/ExampleCalculationService/: calculation_service_test.py
src/RenewableService/: renewable_service.py  renewable_service_base.py  renewable_service_dataclasses.py  renewableservice.py
test/: ClimateGroningen_desc.csv  datacenter_bess_scenario.esdl  renewable_service.py  seed_solar_data.py  test_renewableservice.py
